apps/base/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: homepage.T-Py-T.net
    # cert-manager.io/cluster-issuer: letsencrypt-production
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
spec:
  ingressClassName: cilium
  rules:
    - host: homepage.T-Py-T.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
  # tls:
  #   - hosts:
  #       - homepage.T-Py-T.net
  #     secretName: homepage-ingress-production
